k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcsp-hello-world
  namespace: learning-workspace
  labels:
    app: mcsp-hello-world
    version: "1.0.0"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mcsp-hello-world
  template:
    metadata:
      labels:
        app: mcsp-hello-world
    spec:
      containers:
        - name: mcsp-hello-world
          image: image-registry.openshift-image-registry.svc:5000/learning-workspace/mcsp-hello-world:v1.0.8
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
