k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcsp-hello-world
  namespace: learning-workspace
  labels:
    app: mcsp-hello-world
spec:
  selector:
    app: mcsp-hello-world
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
